--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/jdtzmn/gators#readme",
   "dependencies": {
+    "html-to-text": "^3.3.0",
     "imap": "^0.8.19",
     "mailparser": "^2.1.0",
     "nodemailer": "^4.2.0"
