--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "nodemailer": "^4.2.0"
   },
   "devDependencies": {
-    "elizabot": "0.0.2",
-    "superagent": "^3.6.3"
+    "elizabot": "0.0.2"
   }
 }
