--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "gators",
   "version": "1.1.3",
   "description": "Free and easy texting framework for node using SMS gateways.",
-  "main": "dist/gators.umd.js",
-  "module": "dist/gators.es5.js",
-  "types": "dist/types/src/gators.d.ts",
+  "scripts": {
+    "start": "tsc -w",
+    "prebuild": "rimraf dist",
+    "build": "tsc",
+    "test": "echo \"No test specified\"",
+    "lint": "tslint -p ."
+  },
+  "main": "dist/lib/gators.js",
+  "types": "dist/types/gators.d.ts",
   "files": [
     "dist"
   ],
-  "scripts": {
-    "start": "rollup -c rollup.config.ts -w",
-    "prebuild": "rimraf dist",
-    "build": "rollup -c rollup.config.ts",
-    "test": "jest",
-    "lint": "tslint -p ."
-  },
   "lint-staged": {
     "*.ts": [
       "tslint --fix",
@@ -44,31 +43,25 @@
   "dependencies": {
     "html-to-text": "^5.1.1",
     "imap": "^0.8.19",
-    "lodash": "^4.17.15",
-    "mailparser": "^2.1.0",
-    "nodemailer": "^6.4.10"
+    "lodash": "^4.17.19",
+    "mailparser": "^2.8.0",
+    "nodemailer": "^6.4.11"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^8.1.0",
     "@types/html-to-text": "^5.1.1",
     "@types/imap": "^0.8.29",
-    "@types/lodash": "^4.14.157",
+    "@types/lodash": "^4.14.158",
     "@types/mailparser": "^2.0.2",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.0.27",
     "@types/nodemailer": "^6.4.0",
     "elizabot": "0.0.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
-    "rollup": "^2.19.0",
-    "rollup-plugin-sourcemaps": "^0.6.2",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "ts-loader": "^7.0.5",
+    "ts-loader": "^8.0.2",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
+    "tslint": "^6.1.3",
     "tslint-config-standard": "^9.0.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.7"
   }
 }
