--- a/package.json
+++ b/package.json
@@ -2,9 +2,24 @@
   "name": "gators",
   "version": "1.1.3",
   "description": "Free and easy texting framework for node using SMS gateways.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc -w",
+    "prebuild": "rimraf dist",
+    "build": "tsc",
+    "test": "echo \"No test specified\"",
+    "lint": "tslint -p ."
+  },
+  "main": "dist/lib/gators.js",
+  "types": "dist/types/gators.d.ts",
+  "files": [
+    "dist"
+  ],
+  "lint-staged": {
+    "*.ts": [
+      "tslint --fix",
+      "git add",
+      "jest --findRelatedTests"
+    ]
   },
   "repository": {
     "type": "git",
@@ -26,12 +41,27 @@
   },
   "homepage": "https://github.com/jdtzmn/gators#readme",
   "dependencies": {
-    "html-to-text": "^3.3.0",
+    "html-to-text": "^5.1.1",
     "imap": "^0.8.19",
-    "mailparser": "^2.1.0",
-    "nodemailer": "^4.2.0"
+    "lodash": "^4.17.19",
+    "mailparser": "^2.8.0",
+    "nodemailer": "^6.4.11"
   },
   "devDependencies": {
-    "elizabot": "0.0.2"
+    "@types/html-to-text": "^5.1.1",
+    "@types/imap": "^0.8.29",
+    "@types/lodash": "^4.14.158",
+    "@types/mailparser": "^2.0.2",
+    "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
+    "elizabot": "0.0.3",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^8.0.2",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^3.9.7"
   }
 }
