Fix typescript bugs

--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "@types/mailparser": "^2.0.2",
     "@types/node": "^14.0.27",
     "@types/nodemailer": "^6.4.0",
+    "@types/nodemailer-sendgrid": "^1.0.0",
     "elizabot": "0.0.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "nodemailer-sendgrid": "^1.0.3",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.2",
     "ts-node": "^8.10.2",
